<resources>
    <string name="app_name">Assignment</string>
    <string name="title">Welcome!</string>
    <string name="title1">Sign in to continue</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">-------------------- or --------------------</string>
    <string name="social_media_login">Social Media Login</string>
    <string name="signup_title">Don\'t have an account? Signup</string>
    <string name="signup">Signup</string>
    <string name="createdby">Created By Sid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="chat_fragment">Chat fragment</string>
    <string name="call_fragment">Call fragment</string>
    <string name="home_fragment">Home fragment</string>
    <string name="settings_fragment">Settings fragment</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="enter_number">Enter number</string>
    <string name="enter_message">Enter message</string>
    <string name="ExFragCommunication">Fragment Communication Example</string>
    <string name="ExSpinner">Spinner Example</string>
    <string name="ExSpinnerTwo">Spinner Example 2</string>
    <string name="ExSpinnerTwoEx">Ringtone Alarm Media Volume, Brightness</string>
    <string name="ExRadioGroup">Radio group Example</string>
    <string name="ExRatingBar">Rating Bar Example</string>
    <string name="examples">Examples</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="simpleList">SimpleList view Example</string>
    <string name="recyclerviewexample">Recycler View Examples</string>
    <string name="menuexamples">Menu Examples</string>
    <string name="imageloadexamples">Dynamic Image loading examples</string>
    <string name="choose_country">Choose Country</string>
    <string name="choose_state">Choose State</string>
    <string name="choose_place">Choose Place</string>
    <string name="bottomnavigtaion">Bottom navigation</string>
    <string name="flightbooking">Flight booking</string>
    <string name="flightbookingfrom">From </string>
    <string name="flightbookingetfrom">"From Airport "</string>
    <string name="flightbookingto">To </string>
    <string name="flightbookingetTo">To Airport</string>
    <string name="arrival_on">Arrival on</string>
    <string name="btn_arrival_on">Arrival on</string>
    <string name="rbone_way">One way</string>
    <string name="rbround_trip">Round trip</string>
</resources>