<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvhometitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_fragment"
            app:layout_constraintBottom_toTopOf="@id/guideline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="55dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnhomechat"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/chat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnhomecall"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvhometitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnhomecall"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/call"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnhomechat"
            app:layout_constraintTop_toBottomOf="@+id/tvhometitle" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="349dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_number"
            app:layout_constraintBottom_toTopOf="@id/guideline7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline6">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilmessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_message"
            app:layout_constraintBottom_toTopOf="@id/guideline7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilnumber">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietmessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>