<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpinnerExampleActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvcountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_country"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spincountry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spincountry"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/tvstate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvcountry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvstate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_state"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinstate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spincountry" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinstate"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/tvplace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvstate" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvplace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_place"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinplace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinstate" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinplace"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvplace" />
</androidx.constraintlayout.widget.ConstraintLayout>